--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -14,8 +14,8 @@
             <li><a href="/products">Ver Productos</a></li>
             <li><a href="/listCarts">Ver Carritos</a></li>
             <li><a href="/realtimeproducts">Agregar Productos</a></li>
-            <li><a href="/createCart">Agregar Carritos</a></li>
-            <li><a href="/deleteCart">Eliminar Carritos</a></li>
+            {{!-- <li><a href="/createCart">Agregar Carritos</a></li> --}}
+            {{!-- <li><a href="/deleteCart">Eliminar Carritos</a></li> --}}
             <li><a href="/deleteproducts">Eliminar Productos</a></li>
         </ul>
     </div>
